--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 70%;
   border: 4px solid black;
 }
 
@@ -55,4 +54,92 @@ form > * {
 
 form > input {
   border: 2px solid black;
+  font-size: medium;
+}
+
+h1 {
+  font-size: 2rem;
+  text-align: center;
+}
+
+form h1 {
+  margin-bottom: 25%;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  width: 95vw;
+  justify-content: space-between;
+  border: 2px solid #000;
+  padding: 0 1rem;
+}
+
+header h3 {
+  font-size: 1.5rem;
+}
+
+header > nav {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+header > nav > a {
+  text-decoration: none;
+  color: #000;
+  padding: 12px;
+}
+
+header > nav > a.active {
+  color: blue;
+}
+
+header > nav > a:nth-child(2) {
+  border-left: 1px solid #000;
+  border-right: 1px solid #000;
+}
+
+#date {
+  align-self: flex-end;
+  margin-right: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  width: 95vw;
+  justify-content: flex-start;
+  border: 2px solid #000;
+  padding: 0 1rem;
+}
+
+.all-books {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto !important;
+}
+
+.all-books,
+form,
+#contact {
+  overflow-y: hidden;
+  height: calc(96vh - 168px);
+}
+
+#contact {
+  padding: 5rem 0 0 0;
+  font-size: 1.2rem;
+}
+
+#contact > p:nth-child(1) {
+  margin-top: 3rem;
+}
+
+.hidden {
+  display: none;
 }
